force-app/main/default/objects/Training_NS_Code__mdt/Training_NS_Code__mdt.object-meta.xml
<CustomObject>
    <label>Training NS Code</label>
    <pluralLabel>Training NS Codes</pluralLabel>
</CustomObject>