force-app/main/default/objects/Training_NS_Code__mdt/fields/NS_Class__c.field-meta.xml
<CustomField>
    <fullName>NS_Class__c</fullName>
    <label>NS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>