force-app/main/default/objects/Training_NS_Code__mdt/fields/NS_Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Deferred_Revenue_Account__c</fullName>
    <label>NS Deferred Revenue Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>