force-app/main/default/objects/Training_NS_Code__mdt/fields/NS_Department__c.field-meta.xml
<CustomField>
    <fullName>NS_Department__c</fullName>
    <label>NS Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>