force-app/main/default/objects/Training_NS_Code__mdt/fields/NS_Income_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Income_GL_Account__c</fullName>
    <label>NS Income GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>