force-app/main/default/objects/Training_NS_Code__mdt/fields/NS_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NS_Revenue_Schedule__c</fullName>
    <label>NS Revenue Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>