force-app/main/default/objects/Training_NS_Code__mdt/fields/SF_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Id__c</fullName>
    <label>SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>